--- a/AttemptZero/packages.config
+++ b/AttemptZero/packages.config
@@ -5,6 +5,7 @@
   <package id="Bunifu.Licensing" version="6.0.2" targetFramework="net472" />
   <package id="Bunifu.UI.WinForms" version="7.0.0" targetFramework="net472" />
   <package id="Bunifu.Utils" version="1.0.6" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.14.0" targetFramework="net472" />
   <package id="GumroadLicensing" version="2.0.2" targetFramework="net472" />
   <package id="Hourglass" version="1.0.2" targetFramework="net472" />
