--- a/AttemptZero/App.config
+++ b/AttemptZero/App.config
@@ -6,8 +6,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AttemptZero.Properties.Settings.AttemptSQL" connectionString="Data Source=LAPTOP-V5O7M5C5\SQLEXPRESS;Initial Catalog=AttempZero;Integrated Security=True;TrustServerCertificate=True"
-      providerName="System.Data.SqlClient" />
+    <add name="AttemptZero.Properties.Settings.AttemptSQL" connectionString="Data Source=LAPTOP-V5O7M5C5\SQLEXPRESS;Initial Catalog=AttempZero;Integrated Security=True;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
