--- a/AttemptZero/packages.config
+++ b/AttemptZero/packages.config
@@ -18,8 +18,13 @@
   <package id="Kimtoo.DbManager" version="1.0.8" targetFramework="net472" />
   <package id="Kimtoo.NavigationMenu" version="1.0.2" targetFramework="net472" />
   <package id="Kimtoo.ValidationProvider" version="1.0.8" targetFramework="net472" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
+  <package id="MessagePack" version="2.5.140" targetFramework="net472" />
+  <package id="MessagePack.Annotations" version="2.5.140" targetFramework="net472" />
+  <package id="MessagePackAnalyzer" version="2.5.140" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.NET.StringTools" version="17.6.3" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.26" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Npgsql" version="4.1.9" targetFramework="net472" />
@@ -35,9 +40,12 @@
   <package id="ServiceStack.Text" version="6.0.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="8.0.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
   <package id="System.Management" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net472" />
   <package id="System.Text.Json" version="7.0.2" targetFramework="net472" />
