--- a/AttemptZero/packages.config
+++ b/AttemptZero/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AspNet.ScriptManager.bootstrap" version="5.2.3" targetFramework="net472" />
+  <package id="AspNet.ScriptManager.jQuery" version="3.7.0" targetFramework="net472" />
+  <package id="bootstrap" version="5.2.0" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Bunifu.Charts.WinForms" version="1.1.5" targetFramework="net472" />
   <package id="Bunifu.Licensing" version="6.0.2" targetFramework="net472" />
@@ -10,6 +13,7 @@
   <package id="GumroadLicensing" version="2.0.2" targetFramework="net472" />
   <package id="Hourglass" version="1.0.2" targetFramework="net472" />
   <package id="Jenga.NET" version="4.0.0" targetFramework="net472" />
+  <package id="jQuery" version="3.7.0" targetFramework="net472" />
   <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
