--- a/AttemptZero/packages.config
+++ b/AttemptZero/packages.config
@@ -32,7 +32,7 @@
   <package id="MySql.Data" version="8.0.26" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Npgsql" version="4.1.9" targetFramework="net472" />
-  <package id="Oracle.ManagedDataAccess" version="19.13.0" targetFramework="net472" />
+  <package id="Oracle.ManagedDataAccess" version="21.14.0" targetFramework="net472" />
   <package id="RestSharp" version="110.2.0" targetFramework="net472" />
   <package id="ServiceStack.Common" version="6.0.2" targetFramework="net472" />
   <package id="ServiceStack.Interfaces" version="6.0.2" targetFramework="net472" />
@@ -45,6 +45,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.CodeDom" version="8.0.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
+  <package id="System.Formats.Asn1" version="8.0.0" targetFramework="net472" />
   <package id="System.Management" version="8.0.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
